--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,10 @@
 header {
-    border-bottom: .2px solid #d6d6d6;
-    margin-bottom: 1em;
-    display: flex;
-    align-items: baseline;
-    justify-content: space-between;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 3em;
+    margin-top: 3em;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #E9E9E9;
 }
 
 #home {
@@ -24,9 +20,22 @@ body {
     margin: 0;
 }
 
+nav > a {
+    color: black;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.feed > a {
+    background-color: white;
+    padding: 6px;
+    text-decoration: none;
+    color: black;
+}
+
 .typemark {
     margin: 0;
-    text-transform: uppercase
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .blurb {
@@ -35,10 +44,17 @@ body {
 }
 
 
+nav > a {
+    background-color: white;
+    padding: 1em;
+}
 
 
-
-
+.entry-content > p {
+    background-color: white;
+    padding: 1em;
+    font-family: 'Times New Roman', Times, serif;
+}
 
 h2 {
     font-weight: normal;
@@ -54,8 +70,8 @@ h2 {
 
 section {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(620px, 1fr));
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 6px;
 }
 
 img {
